...
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button {
                        showContactForm = true
                    } label: {
                        ZStack {
                            Image(systemName: "exclamationmark.bubble")
                                .accessibilityIdentifier("contactFormButton")
                            if viewModel.incidentCount > 0 {
                                Text("\(viewModel.incidentCount)")
                                    .font(.caption2)
                                    .foregroundColor(.white)
                                    .padding(5)
                                    .background(Color.red)
...
